# zoho-gpt-backend

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENT_EDIT_PROTOCOL.md  MANIFEST.in  MASTER_SCOPE_OF_WORK.md  PHASE2_COMPLETION_REPORT.md  README.md  complete_indentation_fix.py  comprehensive_fix.py  final_fix.py  fix_indentation_errors.py  fix_syntax_errors.py  fix_syntax_errors_v2.py  gap_report.md  justfile  log.md  main.py  mcp_manifest.json  new_tasks.md  plan.md  pyproject.toml  rebuild_corrupted_sections.py  requirements-dev.txt  requirements.txt  sync_test.txt  task.md  zoho_api.py  zoho_credentials.json
analyzers/: anomaly_engine.py  delta_compare.py
artifacts/: contract_snapshots.json  l4_readiness_report.json  master_index.json  master_vs_repo_report.json  repo_logics.json
cli/: __init__.py  __main__.py
configs/: bank_covenants.yaml  ratio_targets.yaml
consent/: redactor.py
core/: __init__.py  logic_loader.py  operate_base.py  registry.py
dashboards/: logics.json  orchestrators.json  slo_board.json
data/: format_schemas.json  provenance_mappings.json
docs/: CHANGELOG.md
evidence/: __init__.py  blob_store.py  ledger.py  signer.py
helpers/: __init__.py  alert_policies.py  alerts.py  anomaly_detector.py  anomaly_types.py  execution_engine.py  history_store.py  learning_hooks.py  logic_contract.py  logic_generator.py  naming_enforcer.py  obs.py  pattern_detector.py  pdf_extractor.py  provenance.py  ratios.py  reconciliation.py  rules_engine.py  schema_registry.py  sli.py  slo.py  telemetry.py  test_generator.py  usage_tracker.py  zoho_client.py
logics/: __init__.py  l4_contract_runtime.py  logic_001_profit_and_loss_summary.py  logic_001_profit_loss.py  logic_002_balance_sheet.py  logic_003_trial_balance.py  logic_004_capital_account_summary.py  logic_005_partner_withdrawals.py  logic_006_zone_wise_expenses.py  logic_007_material_purchase_summary.py  logic_008_salary_summary.py  logic_009_vendor_payment_summary.py  logic_010_receivables_summary.py  logic_011_payables_summary.py  logic_012_debtor_ageing_buckets.py  logic_013_creditor_ageing_buckets.py  logic_014_invoice_status.py  logic_015_bill_status.py  logic_016_gstr_filing_status.py  logic_017_tds_filing_status.py  logic_018_highest_selling_items.py  logic_019_highest_revenue_clients.py  logic_020_client_wise_profitability.py  logic_021_po_wise_profitability.py  logic_022_item_wise_sales_summary.py  logic_023_item_wise_profitability.py  logic_024_employee_cost_trends.py  logic_025_purchase_returns_summary.py  logic_026_sales_returns_summary.py  logic_027_dead_stock_report.py  logic_028_stock_movement_report.py  logic_029_cash_flow_statement.py  logic_030_bank_reconciliation_status.py  logic_031_expense_category_trends.py  logic_032_monthly_revenue_trend.py  logic_033_monthly_expense_trend.py  logic_034_budget_vs_actual_report.py  logic_035_year_on_year_growth.py  logic_036_month_on_month_comparison.py  logic_037_project_wise_profitability.py  (+333 more)
obs/: __init__.py  log.py  metrics.py
operate/: __init__.py  pnl_operate.py  salary_operate.py  withdrawals_operate.py
orchestrators/: generic_report_orchestrator.py  mis_orchestrator.py
regulatory/: loader.py
scripts/: gen_logics.py  gen_missing_logics.py  id_linter.py  mcp_smoke.py
surfaces/: contracts.py
tests/: conftest.py  test_history_store.py  test_manifest.py
tools/: apply_l4_wrapper.py  audit_l4_readiness.py  auto_expansion_monitor.py  cleanup_phase2.py  coverage_audit.py  dep_audit.py  dry_run_logic_renamer.py  extract_master_index.py  fix_all_syntax_errors.py  (+19 more)
(+291 files in other folders)
